RESOLVED FIXED 264359
Unified PDF plugin contents do not scroll
https://bugs.webkit.org/show_bug.cgi?id=264359
Summary Unified PDF plugin contents do not scroll
Tim Horton
Reported 2023-11-07 13:04:47 PST
Hoist PDFPlugin ScrollableArea implementation to PDFPluginBase
Attachments
Tim Horton
Comment 1 2023-11-07 13:22:08 PST
EWS
Comment 2 2023-11-07 16:13:57 PST
Committed 270358@main (cbf8b324d90f): <https://commits.webkit.org/270358@main> Reviewed commits have been landed. Closing PR #20124 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-11-07 16:15:15 PST
Note You need to log in before you can comment on or make changes to this bug.